# pycasts

./: .env  .gitignore  README.md  llama.dockerfile  nitric.aws.yaml  nitric.yaml  pyproject.toml  python.dockerfile.dockerignore  torch.dockerfile  torch.dockerfile.dockerignore
batches/: podcast.py  script.py
common/: resources.py
samples/: power-rangers.webm
services/: api.py
